# MPI_Sudoku_Generator

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  testChangeLevel.cpp  testEvaluateGrid.cpp  testGenerateProtobuf.cpp  testGenerateSudoku.cpp  testGetScore.cpp  testLatexGenerator.cpp  testLevel.cpp  testLevelInGeneration.cpp  testMPILatexGenerator.cpp  testMPISendReceive.cpp  testSortVector.cpp
apps/output/: readMe.txt
grid/: CMakeLists.txt  grid.cpp
include/grid/: grid.hpp
include/latexGenerator/: latexGenerator.hpp
include/sudoku/: sudoku.hpp  sudoku.pb.h
latexGenerator/: CMakeLists.txt  latexGenerator.cpp
proto/: CMakeLists.txt  sudoku.pb.cc
proto/proto_files/: sudoku.proto
sudoku/: CMakeLists.txt  sudoku.cpp  sudoku_f.cpp
